--- a/locale/bn.json
+++ b/locale/bn.json
@@ -38,7 +38,8 @@
       "viewDayi": "দায়ী দেখুন",
       "leaveMatters": "ছুটির বিষয়",
       "realTree": "রিয়েল ট্রি",
-      "editRequest": "এডিট রিকোয়েস্ট"
+      "editRequest": "এডিট রিকোয়েস্ট",
+      "markaz": "মারকাজ"
     },
     "UserDashboard": {
       "welcome": "স্বাগতম",
