--- a/locale/en.json
+++ b/locale/en.json
@@ -38,7 +38,8 @@
       "viewDayi": "View Daee",
       "leaveMatters": "Leave Matters",
       "realTree": "Real Tree",
-      "editRequest": "Edit Request"
+      "editRequest": "Edit Request",
+      "markaz": "Markaz"
     },
     "UserDashboard": {
       "welcome": "Welcome",
