--- a/locale/bn.json
+++ b/locale/bn.json
@@ -352,16 +352,16 @@
     "failedToSubmitEditRequestPleaseTryAgain": "এডিট রিকোয়েস্ট জমা ব্যর্থ হয়েছে। আবার চেষ্টা করুন।"
   },
   "SigninForm": {
-    "title": "সাইন ইন",
-    "description": "লগইনের জন্য আপনার অ্যাকাউন্টের তথ্য দিন",
+    "title": "আপনার অ্যাকাউন্টে সাইন ইন করুন",
+    "description": "সাইন ইন করতে নিচে আপনার ইমেইল ও পাসওয়ার্ড লিখুন",
     "fields": {
       "email": {
         "label": "ইমেইল",
-        "placeholder": "ইমেইল ঠিকানা লিখুন"
+        "placeholder": "নাম@উদাহরণ.কম"
       },
       "password": {
         "label": "পাসওয়ার্ড",
-        "placeholder": "পাসওয়ার্ড লিখুন"
+        "placeholder": "••••••••"
       }
     },
     "buttons": {
@@ -375,7 +375,8 @@
     "errors": {
       "alreadyLoggedInElsewhere": "আপনি ইতিমধ্যে অন্য ডিভাইসে লগইন করা আছে।",
       "lockError": "সেশন লক যাচাই করা যায়নি। দয়া করে আবার চেষ্টা করুন।",
-      "sessionLockFailed": "সেশন লক পরীক্ষা ব্যর্থ হয়েছে"
+      "sessionLockFailed": "সেশন লক পরীক্ষা ব্যর্থ হয়েছে",
+      "accountBanned": "এই অ্যাকাউন্টটি নিষিদ্ধ করা হয়েছে। সহায়তার জন্য সাপোর্টে যোগাযোগ করুন।"
     },
     "toasts": {
       "loginSuccessful": "লগইন সফল হয়েছে",
