Updated Leave Table

--- a/locale/bn.json
+++ b/locale/bn.json
@@ -428,6 +428,35 @@
     "loading": "ডাটা লোড হচ্ছে…",
     "errorSubtitle": "ডাটা লোড করতে সমস্যা হয়েছে।",
     "errorPrefix": "ত্রুটি:",
+    "stats": {
+      "totalRequests": "মোট আবেদন",
+      "title": "ছুটির পরিসংখ্যান",
+      "allowances": "ছুটির বরাদ্দ",
+     "total":"মোট",
+     "remaining":"বাকি",
+     "totalremaining":"মোট বাকি",
+      "approvedShort": "অনুমোদিত",
+      "pendingShort": "অপেক্ষমাণ",
+      "day":"দিন",
+      "rejectedShort": "বাতিল",
+      "totalappilied":"মোট আবেদন",
+      "daysRequested": "চাওয়া দিনের সংখ্যা",
+      "daysApproved": "অনুমোদিত দিনের সংখ্যা",
+      "upcomingLeave": "পরবর্তী অনুমোদিত ছুটি",
+      "daysSummary":"দিনের পরিসংখ্যান",
+      "rejectionRate": "বাতিলের হার",
+      "popularType": "সবচেয়ে বেশি নেওয়া ধরন",
+      "none": "—",
+      "hint": "আপনার জমা দেওয়া আবেদন অনুযায়ী।",
+      "types": {
+        "casual": "ক্যাজুয়াল",
+        "sick": "সিক",
+        "maternity": "মাতৃত্ব",
+        "paternity": "পিতৃত্ব",
+        "annual": "বার্ষিক",
+        "other": "অন্যান্য"
+      }
+    },
     "page": {
       "title": "ছুটি ব্যবস্থাপনা",
       "subtitle": "আপনার ছুটির আবেদন করুন এবং অবস্থা দেখুন।",
