--- a/locale/en.json
+++ b/locale/en.json
@@ -434,6 +434,36 @@
     "loading": "Loading data…",
     "errorSubtitle": "There was a problem loading data.",
     "errorPrefix": "Error:",
+    "stats": {
+      "totalRequests": "Total Requests",
+      "title": "Leave Statistics",
+      "allowances": "Leave Allowances",
+      "total": "Total",
+      "remaining": "Remaining",
+      "totalremaining": "Total Remaining",
+      "approvedShort": "Approved",
+      "pendingShort": "Pending",
+      "day": "Day",
+      "rejectedShort": "Rejected",
+      "totalapplied": "Total Applied",
+      "daysRequested": "Days Requested",
+      "totalappilied":"Total Applied",
+      "daysApproved": "Days Approved",
+      "upcomingLeave": "Upcoming Approved Leave",
+      "daysSummary": "Days Summary",
+      "rejectionRate": "Rejection Rate",
+      "popularType": "Most Popular Type",
+      "none": "—",
+      "hint": "Based on your submitted applications.",
+      "types": {
+        "casual": "Casual",
+        "sick": "Sick",
+        "maternity": "Maternity",
+        "paternity": "Paternity",
+        "annual": "Annual",
+        "other": "Other"
+      }
+    },
     "page": {
       "title": "Leave Management",
       "subtitle": "Apply for and track your leave requests.",
