Updated Admin Leave Management

--- a/locale/bn.json
+++ b/locale/bn.json
@@ -841,10 +841,10 @@
       "email": "ইমেইল",
       "phone": "ফোন",
       "casual": "ক্যাজুয়াল",
-      "sick": "সিক",
-      "maternity": "ম্যাটারনিটি",
-      "paternity": "প্যাটারনিটি",
-      "annual": "বার্ষিক",
+      "casualRemaining": "বাকি ক্যাজুয়াল",
+      "sick": "অসুস্থ",
+      "sickRemaining": "বাকি অসুস্থ",
+      "totalRemaining": "মোট বাকি",
       "other": "অন্যান্য",
       "total": "মোট",
       "type": "ধরন",
