--- a/locale/en.json
+++ b/locale/en.json
@@ -848,10 +848,10 @@
       "email": "Email",
       "phone": "Phone",
       "casual": "Casual",
+      "casualRemaining": "Remaining Casual",
       "sick": "Sick",
-      "maternity": "Maternity",
-      "paternity": "Paternity",
-      "annual": "Annual",
+      "sickRemaining": "Remaining Sick",
+      "totalRemaining": "Total Remaining",
       "other": "Other",
       "total": "Total",
       "type": "Type",
