Fix Localixation Errors

--- a/locale/bn.json
+++ b/locale/bn.json
@@ -708,6 +708,7 @@
         "unionadmin": "ইউনিয়ন এডমিন",
         "markazadmin": "মার্কায এডমিন",
         "daye": "দা'ঈ",
+        "null": "কোনো ভূমিকা",
         "assistantList": "সহযোগী দায়ী"
       },
       "placeholders": {
