--- a/locale/en.json
+++ b/locale/en.json
@@ -202,6 +202,7 @@
     },
     "adminDashboard": {
       "welcome": "Welcome",
+      "searchMonth": "Search Month",  
       "months": {
         "january": "January",
         "february": "February",
