Scroll Issues Fixed

--- a/locale/en.json
+++ b/locale/en.json
@@ -63,7 +63,7 @@
         "comparison": "View Comparison",
         "amoliMuhasaba": "A'mali Muhasaba",
         "moktobSubject": "Maktab Matters",
-        "talimSubject": "Women's Taleem Matters",
+        "talimSubject": "Women's Taleem",
         "dayiSubject": "Assistant Daee Matters",
         "dawatiSubject": "Dawah Matters",
         "dawatiMojlish": "Dawah Majlis",
@@ -225,7 +225,7 @@
         "comparison": "View Comparison",
         "amoliMuhasaba": "A'mali Muhasaba",
         "moktobSubject": "Maktab Matters",
-        "talimSubject": "Women's Taleem Matters",
+        "talimSubject": "Women's Taleem",
         "dayiSubject": "Assistant Daee Matters",
         "dawatiSubject": "Dawah Matters",
         "dawatiMojlish": "Dawah Majlis",
