দাওয়াতি মজলিশ Issues Fixed

--- a/locale/bn.json
+++ b/locale/bn.json
@@ -173,7 +173,7 @@
         "title": "দাওয়াতি বিষয়"
       },
       "dawatiMojlish": {
-        "dawatterGuruttoMojlish": "দাওয়াতের গুরুত্ব মজলিশ",
+        "dawatterGuruttoMojlish": "দাওয়াতি মজলিশ",
         "mojlisheOnshogrohon": "মজলিশে অংশগ্রহণ",
         "prosikkhonKormoshalaAyojon": "প্রশিক্ষণ কর্মশালা আয়োজন",
         "prosikkhonOnshogrohon": "প্রশিক্ষণে অংশগ্রহণ",
@@ -289,7 +289,7 @@
       },
       "dawatiMojlish": {
         "title": "দাওয়াতি মজলিশ",
-        "dawatterGuruttoMojlish": "দাওয়াতের গুরুত্ব মজলিশ",
+        "dawatterGuruttoMojlish": "দাওয়াতি মজলিশ",
         "mojlisheOnshogrohon": "মজলিশে অংশগ্রহণ",
         "prosikkhonKormoshalaAyojon": "প্রশিক্ষণ কর্মশালা আয়োজন",
         "prosikkhonOnshogrohon": "প্রশিক্ষণে অংশগ্রহণ",
