Header Name Change

--- a/locale/bn.json
+++ b/locale/bn.json
@@ -3,6 +3,8 @@
     "toggleSidebar": "সাইডবার টগল করুন",
     "instituteName": "ইসলামি দাওয়াহ ইনস্টিটিউট বাংলাদেশ",
     "dawahYear": "দাওয়াতি বছর",
+    "leaveSubject": "আপনার ছুটির আবেদন জমা হয়েছে",
+    "leaveSubjectApproved": "আপনার ছুটির আবেদন সফলভাবে জমা দেওয়া হয়েছে",
     "gregorian": "ইং",
     "hijri": "হিজরি",
     "openAccountMenu": "অ্যাকাউন্ট মেনু খুলুন",
