--- a/locale/bn.json
+++ b/locale/bn.json
@@ -118,6 +118,8 @@
         "tahajjud": "তাহাজ্জুদ",
         "surah": "সুরা",
         "ayat": "আয়াত",
+        "tilawat": "তিলাওয়াত",
+        "pageNo": "পৃষ্ঠা নম্বর",
         "zikir": "যিকির",
         "ishraq": "ইশরাক/আওয়াবীন/চাশ্ত",
         "jamat": "জামাত",
