--- a/locale/en.json
+++ b/locale/en.json
@@ -118,6 +118,8 @@
           "tahajjud": "Tahajjud",
           "surah": "Surah",
           "ayat": "Ayat",
+          "tilawat": "Tilawat",
+          "pageNo": "Page No",
           "zikir": "Dhikr",
           "ishraq": "Ishraq/Awwabin/Chasht",
           "jamat": "Jamaat",
