--- a/locale/bn.json
+++ b/locale/bn.json
@@ -36,6 +36,7 @@
       "dineFera": "দ্বীনে ফিরে এসেছে",
       "soforSubject": "সফর বিষয়",
       "kargojariSubject": "কারগুজারী",
+      "dayeReview": "দা'ঈ রিভিউ",
       "leaveSubject": "ছুটি বিষয়",
       "calendar": "কর্মসূচি",
       "addDayi": "দা'ঈ এড করুন",
