--- a/locale/en.json
+++ b/locale/en.json
@@ -35,6 +35,7 @@
         "jamatSubject": "Jamaat Matters",
         "dineFera": "Returned to Islam",
         "soforSubject": "Travel Matters",
+        "dayeReview": "Dayee Review",
         "kargojariSubject": "Kargojari",
         "leaveSubject": "Leave Matters",
         "calendar": "Program",
